# Basidia

./: .coverage  Makefile  README.md  main.py  plan.md  pyproject.toml  test_rpc.py
basidia/: __main__.py  decorators.py  service.py
basidia/brokers/: amqp.py  base.py  memory.py
basidia/cli/: main.py
basidia/connections/: README.md
basidia/connections/amqp/: __init__.py  publish.py
basidia/rpc/: __init__.py  rmq.py
tests/: conftest.py  test_decorators.py  test_rpc.py  test_service.py
tests/brokers/: test_amqp_broker.py  test_memory_broker.py
