[tool.poetry]
name = "basidia"
version = "0.1.0"
description = "Async reimplementation of nameko"
authors = ["Brent Gruber <brent.gruber77@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.6"
aio-pika = "^6.7.1"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
