[tool.poetry]
name = "basidia"
version = "0.1.0"
description = ""
authors = ["Brent Gruber <brent.gruber77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^8.2.4"
msgpack = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
